Fixing the grid on mobile

--- a/styles.css
+++ b/styles.css
@@ -119,7 +119,7 @@ ul {
 /* This is the stuff for the main team page, where you can see all of the dogs */
 /* Thanks again to W3Schools for teaching me CSS */
 .grid-container {
-    max-width: 1200px;
+    width: 80%;
     margin: 0 auto;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -153,11 +153,6 @@ ul {
     position: sticky;
     top: 200px;
     margin-right: 137px;
-}
-
-/* I know this is super jank but it fixes the problem of needing the spacing to be slightly different on the team page only */
-#sidebarSpacingTeampage {
-    margin-right: -150px;
 }
 
 /* Thank you W3 */
@@ -228,21 +223,16 @@ ul {
 /* Stuff for each individual dog's about page */
 /* ------------------------------------------ */
 
-#aboutPageWrapper {
-    display: flex;
-}
-
 #gallery {
-    width: 50%;
+    width: 500px;
+    height: auto;
     float: left;
-    margin-right: 15px;
-    margin-bottom: 80px;
+    margin-right: 15px; /* Small gap between the two sections */
     /* border: 7px solid red; */
 }
 
 #info {
-    width: 50%;
-    margin-right: 25px;
+    width: 500px;
     height: auto;
     float: left;
     /* border: 7px solid green; */
@@ -303,6 +293,7 @@ ul {
 
 #aboutTabs {
     position: relative;
+    width: 500px;
     height: 50px;
     /* border: 3px solid rgb(33, 32, 139); */
     bottom: 55px;
